# SmithWaterman

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/smith_waterman_executable/: CMakeLists.txt
src/smith_waterman_executable/src/: main.cpp  smith_waterman.cpp  smith_waterman.h
src/smith_waterman_utils/: CMakeLists.txt
src/smith_waterman_utils/include/smith_waterman_utils/: generic_math_function.h  matrix.h
src/smith_waterman_utils/tests/: CMakeLists.txt  matrix.cpp
